fix(front-end/title-and-child): added flex-wrap

--- a/front-end/src/components/molecules/title-and-child/title-and-child-styles.scss
+++ b/front-end/src/components/molecules/title-and-child/title-and-child-styles.scss
@@ -5,6 +5,7 @@
 
   &__child {
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
   }
 }
